Added 2 more flows.

--- a/PrimeService.Tests/PrimeService.Tests.csproj
+++ b/PrimeService.Tests/PrimeService.Tests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Remove="Pages.cs" />
     <Compile Remove="ReportTest.cs" />
+    <Compile Remove="TestCases\LoginTest.cs" />
   </ItemGroup>
 
   <ItemGroup>
